ci: fix triggers

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,11 @@ on:
   push:
     paths:
     - '**.zig'
+    - 'src/**.zig'
   pull_request:
     paths:
     - '**.zig'
+    - 'src/**.zig'
   schedule:
     - cron: "0 13 * * *"
   workflow_dispatch:
